feat: add controller to refresh JWT
